--- a/blocks/popup/__about-me/popup__about-me.css
+++ b/blocks/popup/__about-me/popup__about-me.css
@@ -2,7 +2,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    max-width: 358px;;
+    max-width: 358px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.21);
     outline: none;
