--- a/blocks/elements/__like/_active/elemenst__like_active.css
+++ b/blocks/elements/__like/_active/elemenst__like_active.css
@@ -1,4 +1,4 @@
-.elements__like-active {
+.elements__like_active {
     background: url(../../../images/Union.png) no-repeat;
     max-width: 22px;
     max-height: 19px;
