--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,12 +1,12 @@
 .profile__title {
-    margin: 60px 0 0 23px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    margin: 53px 0 0 22px;
+    max-width: 500px;
 }
+
+
 
 @media screen and (max-width: 400px) {
     .profile__title {
-        margin: 0 auto;
+        margin: 0;
     }
 }
