--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(auto, 1fr);
     column-gap: 17px;
     row-gap: 23px;
-    margin: 46px 200px 0 200px;
+    margin: 46px 0 0 0;
 }
 
 @media screen and (max-width: 1100px) {
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 400px) {
     .elements {
-        padding: 0 19px 0 19px;
         margin: 36px 0 0 0;
+        padding: 0 19px 0 19px;
     }
 }
