--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,14 +1,9 @@
 .header__logo {
     max-width: 142px;
     max-height: 33px;
-    margin: 45px 0 0 200px;
+    margin: 45px 0 27px 0;
 }
 
-@media screen and (max-width: 905px) {
-    .header__logo {
-        margin-left: 100px;
-    }
-}
 
 @media screen and (max-width: 400px) {
     .header__logo {
