--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,9 +1,14 @@
 .popup__close {
+    background-image: url(../../../images/Close-Icon.png);
+    background-size: cover;
+    background-color: black;
+    border: none;
     position: absolute;
     top: -40px;
     right: -40px;
-    max-width: 32px;
-    max-height: 32px;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
 }
 
 .popup__close:hover {
@@ -13,10 +18,9 @@
 
 @media screen and (max-width: 500px) {
     .popup__close {
-        position: absolute;
         top: -30px;
         right: 0px;
-        max-width: 20px;
-        max-height: 20px;
+        width: 20px;
+        height: 20px;
     }
 }
