--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,19 +1,21 @@
 .popup__content {
     background-color: white;
     max-width: 430px;
+    max-height: 330px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     padding: 34px 36px 34px 36px;
-    max-height: 300px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 500px) {
     .popup__content {
-        max-width: 282px;
-        max-height: 322px;
-        padding: 22px 22px 24px 22px;
+        width: 235px;
+        padding: 22px 24px 24px 22px;
     }
 }
 
