--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,21 +2,13 @@
     max-width: 168px;
     max-height: 127px;
     border-radius: 50%;
-    margin: 36px 0 0 200px;
+    margin: 30px 0 0 0;
+    background-size: cover;
 }
 
 @media screen and (max-width: 905px) {
     .profile__avatar {
-        margin-left: 100px;
-        
+        margin: 22px auto 0 auto;
     }
 }
 
-
-@media screen and (max-width: 400px) {
-    .profile__avatar {
-        max-width: 168px;
-        max-height: 127px;
-        margin: 38px auto 0 auto;
-    }
-}
