--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,4 @@
-.profile__title-name {
+.profile__name {
     font-size: 42px;
     font-weight: 500;
     line-height: 48px;
@@ -11,17 +11,25 @@
     overflow: hidden;
 }
 
-@media screen and (max-width: 905px) {
-    .profile__title-name {
-        margin-left: 70px;
+@media screen and (max-width: 1266px) {
+    .profile__name {
+        max-width: 250px;
     }
 }
 
+@media screen and (max-width: 905px) {
+    .profile__name {
+        max-width: 300px;
+    }
+}
+
+
 @media screen and (max-width: 400px) {
-    .profile__title-name {
-        margin: 22px auto 0 auto;
+    .profile__name {
+        margin: 22px 0 0 25px;
         font-size: 27px;
         line-height: 32px;
         text-align: center;
+        max-width: 200px;
     }
 }
