--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,17 +1,19 @@
 .profile {
     display: flex;
+    margin-top: 18px;
 }
 
 @media screen and (max-width: 905px) {
     .profile {
     flex-direction: column;
-        
+    justify-content: center;
+    align-items: center;
     }
 }
 
 @media screen and (max-width: 400px) {
     .profile {
+    margin-top: 18px;
         padding: 0 19px 0 19px;
-        position: relative;
     }
 }
