--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,11 +1,11 @@
 .popup__close {
     background-image: url(../../../images/Close-Icon.png);
     background-size: cover;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     border: none;
     position: absolute;
-    top: -40px;
-    right: -40px;
+    top: -45px;
+    right: -45px;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -16,7 +16,7 @@
     transition: 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 560px) {
     .popup__close {
         top: -30px;
         right: 0px;
