--- a/blocks/elements/__name/elements__name.css
+++ b/blocks/elements/__name/elements__name.css
@@ -8,3 +8,17 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+@media screen and (max-width: 694px) {
+    .elements__name {
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .elements__name {
+        font-size: 24px;
+        line-height: 29px;
+    }
+}
