--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -14,8 +14,16 @@
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 694px) {
     .elements {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+}
+
+
+@media screen and (max-width: 470px) {
+    .elements {
+        grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
         margin: 36px 0 0 0;
         padding: 0 19px 0 19px;
     }
