--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,18 +1,14 @@
 .popup__content {
     background-color: white;
     max-width: 430px;
-    max-height: 330px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     padding: 34px 36px 34px 36px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 560px) {
     .popup__content {
         width: 235px;
         padding: 22px 24px 24px 22px;
