--- a/blocks/profile/__button/_edit/profile__button_edit.css
+++ b/blocks/profile/__button/_edit/profile__button_edit.css
@@ -1,18 +1,22 @@
-.profile__edit {
+.profile__button_edit {
     width: 24px;
     height: 24px;
-    background-image: url(../../../images/Edit-Button.svg);
+    background-image: url(../../../../images/Edit-Button.svg);
     margin: 15px 0 0 20px;
     background-size: cover;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
 }
 
-.profile__edit:hover {
+.profile__button_edit:hover {
     opacity: 0.6;
     transition: 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 400px) {
-    .profile__edit {
+    .profile__button_edit {
         width: 18px;
         height: 18px;
         margin: 30px 0 0 10px;
