--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,7 +3,11 @@
     max-width: 500px;
 }
 
-
+@media screen and (max-width: 694px) {
+    .profile__title {
+        margin: 30px 0 0 0;
+    }
+}
 
 @media screen and (max-width: 400px) {
     .profile__title {
