--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,4 +1,4 @@
-.profile__button_edit {
+.profile__edit {
     width: 24px;
     height: 24px;
     background-image: url(../../../../images/Edit-Button.svg);
@@ -10,13 +10,13 @@
     cursor: pointer;
 }
 
-.profile__button_edit:hover {
+.profile__edit:hover {
     opacity: 0.6;
     transition: 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 400px) {
-    .profile__button_edit {
+    .profile__edit {
         width: 18px;
         height: 18px;
         margin: 30px 0 0 10px;
