--- a/blocks/elements/__card/elements__card.css
+++ b/blocks/elements/__card/elements__card.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     background-color: white;
     max-height: 361px;
+    position: relative;
 }
 
 @media screen and (max-width: 694px) {
