--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,7 +1,8 @@
 .elements__image {
-    max-width: 282px;
-    max-height: 282px;
+    width: 282px;
+    height: 282px;
     border-radius: 10px 10px 0 0;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 694px) {
