--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -2,4 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
 }
