--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,7 +1,7 @@
 .profile__edit {
     width: 24px;
     height: 24px;
-    background-image: url(../../../../images/Edit-Button.svg);
+    background-image: url(../../../images/Edit-Button.svg);
     margin: 15px 0 0 20px;
     background-size: cover;
     padding: 0;
