--- a/pages/index.css
+++ b/pages/index.css
@@ -13,7 +13,9 @@
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
 @import url(../blocks/elements/__card/elements__card.css);
+@import url(../blocks/elements/__button/elements__button.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__title/elements__title.css);
@@ -25,7 +27,10 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__subtitle/popup__subtitle.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/elements/__like/_active/elemenst__like_active.css);
