--- a/pages/index.css
+++ b/pages/index.css
@@ -33,5 +33,8 @@
 @import url(../blocks/popup/__subtitle/popup__subtitle.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/_type/popup_type_error_activ.css);
+@import url(../blocks/popup/__form/_input/popup__form_input_error.css);
 @import url(../blocks/elements/__like/_active/elemenst__like_active.css);
 @import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
