--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,8 +8,10 @@
     left: 0;
     visibility: hidden;
     opacity: 0;
-    transition-property: opacity;
-    transition-duration: 0.5s;
-    transition-delay: 0s;
+    transition: visibility 0.6s, opacity 0.6s ease 0s;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
