--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,5 @@
 @import url(../blocks/elements/__like/_active/elemenst__like_active.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/content/content.css);
