--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,19 +1,19 @@
 .profile__avatar {
-    max-width: 168px;
-    max-height: 127px;
-    border-radius: 50%;
-    margin: 30px 0 0 0;
-    background-size: cover;
+  max-width: 168px;
+  max-height: 127px;
+  border-radius: 50%;
+  background-size: cover;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 905px) {
-    .profile__avatar {
-        margin: 22px auto 0 auto;
-    }
+  .profile__avatar {
+    margin: 22px auto 0 auto;
+  }
 }
 
 @media screen and (max-width: 694px) {
-    .profile__avatar {
-        margin: 0;
-    }
+  .profile__avatar {
+    margin: 0;
+  }
 }
