--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,6 @@
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/content/content.css);
+@import url(../blocks/popup/_type/popup_type_del.css);
+@import url(../blocks/elements/__number/elements__number.css);
+@import url(../blocks/profile/__button/_avatar/profile__button_avatar.css);
