--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,6 @@
 .profile__avatar {
-  max-width: 168px;
-  max-height: 127px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   background-size: cover;
   cursor: pointer;
