--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -1,16 +1,18 @@
 .profile__title {
-    margin: 53px 0 0 22px;
-    max-width: 500px;
+  margin: 53px 0 0 22px;
+  width: 500px;
 }
 
 @media screen and (max-width: 694px) {
-    .profile__title {
-        margin: 30px 0 0 0;
-    }
+  .profile__title {
+    margin: 30px 0 0 0;
+    max-width: 250px;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .profile__title {
-        margin: 0;
-    }
+  .profile__title {
+    margin: 0;
+    max-width: 150px;
+  }
 }
