--- a/src/blocks/profile/__pencil/profile__pencil.css
+++ b/src/blocks/profile/__pencil/profile__pencil.css
@@ -1,4 +1,4 @@
-.profile__button_avatar {
+.profile__pencil {
   border: none;
   background-size: cover;
   position: relative;
@@ -9,7 +9,7 @@
   margin: 30px 0 0 0;
 }
 
-.profile__button_avatar::before {
+.profile__pencil::before {
   transition: all 0.2s linear;
   content: "";
   position: absolute;
@@ -18,12 +18,12 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-image: url(../../../../images/pen.png);
+  background-image: url(../../../images/pen.png);
   background-color: rgba(0, 0, 0, 0.8);
   background-position: 50%;
   background-repeat: no-repeat;
 }
 
-.profile__button_avatar:hover:before {
+.profile__pencil:hover:before {
   opacity: 1;
 }
