--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,5 +42,5 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/popup/_type/popup_type_del.css);
 @import url(../blocks/elements/__number/elements__number.css);
-
+@import url(../blocks/elements/__delete/_invisible/elements__delete_invisible.css);
 @import url(../blocks/profile/__pencil/profile__pencil.css);
